add_subdirectory(mat_the_basic_image_container)
add_subdirectory(how_to_scan_images)
add_subdirectory(mat_mask_operations)
add_subdirectory(mat_operations)
add_subdirectory(AddingImages)
add_subdirectory(discrete_fourier_transform)
add_subdirectory(file_input_output)
add_subdirectory(how_to_use_OpenCV_parallel_for_)
