add_subdirectory(HighGui)
add_subdirectory(Histograms_Matching)
add_subdirectory(ImgProc)
add_subdirectory(ImgTrans)
add_subdirectory(ShapeDescriptors)
add_subdirectory(TrackingMotion)
add_subdirectory(calib3d)
add_subdirectory(core)
add_subdirectory(features2D)
add_subdirectory(imgcodecs)
add_subdirectory(videoio)
