add_subdirectory(calib3d)
add_subdirectory(core)
add_subdirectory(features2D)
add_subdirectory(HighGui)
add_subdirectory(Histograms_Matching)
add_subdirectory(imgcodecs)
add_subdirectory(ImgProc)
add_subdirectory(ImgTrans)
add_subdirectory(ml)
add_subdirectory(objectDetection)
add_subdirectory(photo)
add_subdirectory(ShapeDescriptors)
add_subdirectory(TrackingMotion)
add_subdirectory(video)
add_subdirectory(videoio)
