add_subdirectory(anisotropic_image_segmentation)
add_subdirectory(basic_drawing)
add_subdirectory(changing_contrast_brightness_image)
add_subdirectory(morph_lines_detection)
add_subdirectory(motion_deblur_filter)
add_subdirectory(out_of_focus_deblur_filter)
add_subdirectory(periodic_noise_removing_filter)
add_subdirectory(HitMiss)
add_subdirectory(Pyramids)
add_subdirectory(Smoothing)

add_executable(04_eroding_and_dilating Morphology_1.cpp)
target_link_libraries(04_eroding_and_dilating PUBLIC OpenCV::HighGui OpenCV::ImgCodecs OpenCV::ImgProc)
set_property(TARGET 04_eroding_and_dilating PROPERTY FOLDER "Tutorials/Image Processing/Basic")

add_executable(05_more_morphology Morphology_2.cpp)
target_link_libraries(05_more_morphology PUBLIC OpenCV::HighGui OpenCV::ImgCodecs OpenCV::ImgProc)
set_property(TARGET 05_more_morphology PROPERTY FOLDER "Tutorials/Image Processing/Basic")

add_executable(09_basic_thresholding Threshold.cpp)
target_link_libraries(09_basic_thresholding PUBLIC OpenCV::HighGui OpenCV::ImgCodecs OpenCV::ImgProc)
set_property(TARGET 09_basic_thresholding PROPERTY FOLDER "Tutorials/Image Processing/Basic")

add_executable(10_thresholding_with_inRange Threshold_inRange.cpp)
target_link_libraries(10_thresholding_with_inRange PUBLIC OpenCV::HighGui OpenCV::VideoIO OpenCV::ImgCodecs OpenCV::ImgProc)
set_property(TARGET 10_thresholding_with_inRange PROPERTY FOLDER "Tutorials/Image Processing/Basic")
